@@ -1,9 +1,7 @@
 package com.wirehood.orderservice.service;
 
-import com.wirehood.orderservice.dto.InventoryResponse;
-import com.wirehood.orderservice.dto.OrderLineItemDto;
-import com.wirehood.orderservice.dto.OrderRequest;
-import com.wirehood.orderservice.dto.OrderResponse;
+import com.wirehood.orderservice.client.InventoryClient;
+import com.wirehood.orderservice.dto.*;
 import com.wirehood.orderservice.model.Order;
 import com.wirehood.orderservice.model.OrderLineItem;
 import com.wirehood.orderservice.repository.OrderRepository;
@@ -11,12 +9,13 @@ import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
-import org.springframework.web.reactive.function.client.WebClient;
+import reactor.core.publisher.Flux;
+import reactor.core.publisher.Mono;
+import reactor.core.scheduler.Schedulers;
 
-import java.util.Arrays;
-import java.util.List;
 import java.util.UUID;
-import java.util.stream.Collectors;
+
+import static java.lang.Boolean.FALSE;
 
 @Service
 @RequiredArgsConstructor
@@ -25,67 +24,77 @@ import java.util.stream.Collectors;
 public class OrderService {
 
     private final OrderRepository orderRepository;
-    private final WebClient.Builder webClientBuilder;
+    private final InventoryClient inventoryClient;
 
-    public void placeOrder(OrderRequest orderRequest) {
-        Order order = new Order();
-        order.setOrderNumber(UUID.randomUUID().toString());
+    public Mono<String> placeOrder(OrderCreateDto orderCreateDto) {
+        log.info("Placing order {}", orderCreateDto);
 
-        List<OrderLineItem> orderLineItemList = orderRequest.getOrderLineItemDtoList()
-                .stream()
-                .map(this::dtoToOrderLineItem)
-                .collect(Collectors.toList());
+        var orderLineItemList = orderCreateDto.getOrderLineItemCreateDtoList().stream()
+                .map(this::convertOrderLineItemCreateDtoToOrderLineItem)
+                .toList();
 
-        order.setOrderLineItemsList(orderLineItemList);
-
-        List<String> skuCodes = order.getOrderLineItemsList().stream()
+        var skuCodes = orderLineItemList.stream()
                 .map(OrderLineItem::getSkuCode)
-                .collect(Collectors.toList());
+                .toList();
 
-        // call inventory service and place order if product is in stock
-        InventoryResponse[] inventoryResponseArray = webClientBuilder.build().get()
-                .uri("http://inventory-service/api/inventory",
-                        uriBuilder -> uriBuilder.queryParam("skuCode", skuCodes).build())
-                .retrieve()
-                .bodyToMono(InventoryResponse[].class)
-                .block();
+        var inventoryFlux = inventoryClient.checkStockMultiple(skuCodes);
 
-        boolean allProductsInStock = Arrays.stream(inventoryResponseArray)
-                .allMatch(InventoryResponse::isInStock);
+        var allProductsInStockMono = inventoryFlux
+                .map(InventoryStockDto::getIsInStock)
+                .switchIfEmpty(Mono.just(FALSE))
+                .reduce(true, (x1, x2) -> x1 && x2);
 
-        if (allProductsInStock) {
-            orderRepository.save(order);
-            log.info("Order {} saved.", order.getId());
-        } else {
-            throw new IllegalArgumentException("One or more products are not in stock, try again later");
-        }
+        return allProductsInStockMono.flatMap(inStock -> {
+                    if (inStock) {
+                        var order = Order.builder()
+                                .orderNumber(UUID.randomUUID().toString())
+                                .orderLineItemsList(orderLineItemList)
+                                .build();
+                        return Mono.fromCallable(() -> orderRepository.save(order))
+                                .subscribeOn(Schedulers.boundedElastic())
+                                .doOnSuccess(o -> {
+                                    log.info("Order {} created successfully", o);
+                                })
+                                .then(Mono.just("All items are in stock. Order placed successfully"));
+
+                    } else {
+                        log.info("Not all items are in stock. Order not created successfully");
+                        return Mono.just("Not all the items are in stock. Order not placed successfully");
+                    }
+                });
     }
 
-    public List<OrderResponse> getAllOrders() {
-        List<Order> orders = orderRepository.findAll();
+    public Flux<OrderDto> getAllOrders() {
+        log.info("Getting all orders");
 
-        return orders.stream().map(this::orderToDto).collect(Collectors.toList());
+        var orderListMono = Mono.fromCallable(orderRepository::findAll)
+                .subscribeOn(Schedulers.boundedElastic());
+
+        return orderListMono
+                .flatMapIterable(orders -> orders.stream()
+                        .map(this::convertOrderToOrderDto)
+                        .toList());
     }
 
-    private OrderLineItem dtoToOrderLineItem(OrderLineItemDto orderLineItemDto) {
-        OrderLineItem orderLineItem = new OrderLineItem();
-        orderLineItem.setPrice(orderLineItemDto.getPrice());
-        orderLineItem.setQuantity(orderLineItemDto.getQuantity());
-        orderLineItem.setSkuCode(orderLineItemDto.getSkuCode());
-
-        return orderLineItem;
-    }
-
-    private OrderResponse orderToDto(Order order) {
-        return OrderResponse.builder()
-                .id(order.getId())
-                .orderNumber(order.getOrderNumber())
-                .orderLineItemsList(order.getOrderLineItemsList().stream()
-                        .map(this::orderLineItemToDto).collect(Collectors.toList()))
+    private OrderLineItem convertOrderLineItemCreateDtoToOrderLineItem(OrderLineItemCreateDto orderLineItemCreateDto) {
+        return OrderLineItem.builder()
+                .price(orderLineItemCreateDto.getPrice())
+                .quantity(orderLineItemCreateDto.getQuantity())
+                .skuCode(orderLineItemCreateDto.getSkuCode())
                 .build();
     }
 
-    private OrderLineItemDto orderLineItemToDto(OrderLineItem orderLineItem) {
+    private OrderDto convertOrderToOrderDto(Order order) {
+        return OrderDto.builder()
+                .id(order.getId())
+                .orderNumber(order.getOrderNumber())
+                .orderLineItemsList(order.getOrderLineItemsList().stream()
+                        .map(this::orderLineItemToOrderLineItemDto)
+                        .toList())
+                .build();
+    }
+
+    private OrderLineItemDto orderLineItemToOrderLineItemDto(OrderLineItem orderLineItem) {
         return OrderLineItemDto.builder()
                 .id(orderLineItem.getId())
                 .price(orderLineItem.getPrice())
